--- a/view/Chatbot.html
+++ b/view/Chatbot.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Library Chatbot</title>
-  <link rel="stylesheet" href="/static/Chatbot.css" />
+  <link rel="stylesheet" href="Chatbot.css" />
 </head>
 <body>
   <div class="app">
