--- a/view/Chatbot.html
+++ b/view/Chatbot.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="vi">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chat Assistant</title>
-  <link rel="stylesheet" href="Chatbot.css">
+  <link rel="stylesheet" href="/view/Chatbot.css">
 </head>
 
 <body>
@@ -51,6 +52,7 @@
 
   </div>
 
-  <script src="app.js"></script>
+  <script src="/view/app.js"></script>
 </body>
+
 </html>
