--- a/view/Chatbot.html
+++ b/view/Chatbot.html
@@ -16,14 +16,11 @@
     <header>
       <div class="dot"></div>
       <div>
-        <h1>Chat Assistant</h1>
-        <div class="sub">API: <span id="apiStatus"></span></div>
+        <h1>CHAT THƯ VIỆN</h1>
+        <div class="sub"> Trợ lý thư viện <span id="apiStatus"></span></div>
       </div>
 
       <div class="toolbar">
-        <button id="btnOCR" class="btn">📷 OCR</button>
-        <button id="btnRecord" class="btn">🎤 Ghi âm</button>
-        <button id="btnExport" class="btn">Xuất JSON</button>
         <button id="btnNew" class="btn btn-reset">Mới</button>
       </div>
     </header>
@@ -39,6 +36,8 @@
 
       <div>
         <textarea id="input" placeholder="Nhập tin nhắn..."></textarea>
+        <button id="btnOCR" class="btn">📷 OCR</button>
+        <button id="btnRecord" class="btn">🎤 Ghi âm</button>
       </div>
 
       <button id="send" class="send">Gửi</button>
